2004-05-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-sodipodi.scm: Resurrect sodipodi output.

2004-05-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/bass-figure.scm (format-bass-figure): don't set
	number-markup for strings. This fixes string in bass
	figure. (backportme)

	* lily/parser.yy (bass_number): insert number-markup into figure
	definition.

	* scm/define-music-properties.scm (all-music-properties): make
	'figure a markup.

	* scripts/convert-ly.py (conv): \apply -> \applymusic

2004-05-06  Kristof Bastiaensen  <kristof.bastiaensen@vleeuwen.org>

	* elisp/lilypond-mode.el: changed the order of some commands
	("Midi" after "2Midi"), use the user-defined
	LilyPond-command-default as default instead of "LilyPond"

	* elisp/lilypond-mode.el: added a LilyPond-master-file variable,
	to set the master file for the next command.

	* elisp/lilypond-font-lock.el: replaced font-lock-warning-face
	with font-lock-reference-face.

2004-05-07  Heikki Junes <hjunes@cc.hut.fi>

        * Documentation/user/music-glossary.tely ([ab]*): small fixes.

        * Documentation/user/music-glossary.tely ([c-l]*): more fixes.

2004-05-06  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* ly/music-functions-init.ly (TODO): new file.

	* lily/parser.yy (Generic_prefix_music_scm): add more
	music_function symbols.
	(Prefix_composite_music): change \apply to music-function   

	* lily/include/music-function.hh: rename to music-function

2004-05-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/music-head.cc (LY_DEFINE): change order of args.

	* input/regression/music-head.ly (texidoc): new file.

	* lily/parser.yy (Generic_prefix_music): allow generic
	music-transformation functions.	

	* lily/include/music-head.hh (is_music_head): new file.

	* lily/music-head.cc (get_music_head_transform): new file.

2004-05-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/ottava-bracket.cc (print): use coordinate, not (0,0) for