@@ -11,7 +11,6 @@
 
 #include "input.hh"
 #include "lily-proto.hh"
-
 #include "parray.hh"
 #include "smobs.hh"
 
