@@ -1,3 +1,10 @@
+2004-05-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/paper-line.cc (Paper_line): don't store list of stencils,
+	but convert to single Stencil immediately.
+
+	* lily/paper-book.cc (title): don't return Stencil* but Stencil.
+
 2004-05-07  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scm/output-sodipodi.scm: Resurrect sodipodi output.
